--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:32:36 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:33:29 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -147,7 +147,7 @@ body {
       <td>Cameron Smith -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Viktor Hovland(W) E
 Not started</td>
       <td class="greyout leftborder">Sam Burns E
@@ -163,7 +163,7 @@ E thru 1</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Talor Gooch E
 E thru 13</td>
       <td class="greyout leftborder">Brooks Koepka E
@@ -179,9 +179,9 @@ Not started</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Russell Henley E
-E thru 4</td>
+E thru 5</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Will Zalatoris E
@@ -195,7 +195,7 @@ Not started</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Xander Schauffele(W) E
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland E
@@ -209,7 +209,7 @@ Not started</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Webb Simpson -1
 -1 thru 2</td>
       <td>Jon Rahm(W) E
@@ -289,7 +289,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -2
 -2 thru 9</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Robert MacIntyre -1
 -1 thru 6</td>
       <td>Patrick Cantlay E
@@ -337,7 +337,7 @@ Not started</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Sam Burns E
@@ -353,7 +353,7 @@ E thru 10</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Patrick Cantlay E
@@ -369,7 +369,7 @@ Not started</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
       <td>Corey Conners(W) -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Jon Rahm E
@@ -385,7 +385,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -2
 -2 thru 9</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Xander Schauffele E
@@ -401,7 +401,7 @@ Not started</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Patrick Cantlay(W) E
 Not started</td>
       <td>Sam Burns E
@@ -417,7 +417,7 @@ Not started</td>
       <td>Cameron Smith(W) -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Xander Schauffele E
@@ -433,7 +433,7 @@ Not started</td>
       <td>Cameron Smith(W) -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Hideki Matsuyama E
 E thru 9</td>
       <td>Xander Schauffele E
@@ -449,7 +449,7 @@ Not started</td>
       <td>Cameron Smith(W) -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Hideki Matsuyama E
@@ -465,7 +465,7 @@ Not started</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Jordan Spieth E
@@ -481,7 +481,7 @@ Not started</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Talor Gooch E
@@ -497,7 +497,7 @@ E thru 9</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Dustin Johnson(W) E
 Not started</td>
       <td>Patrick Cantlay E
@@ -513,13 +513,13 @@ Not started</td>
       <td>Joaquin Niemann -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Sam Burns E
 E thru 1</td>
-      <td>Brian Harman E
-E thru 15</td>
-      <td class="greyout leftborder">Viktor Hovland E
+      <td>Viktor Hovland E
 Not started</td>
+      <td class="greyout leftborder">Brian Harman +1
++1 thru 16</td>
       <td class="greyout">Shane Lowry(W) +2
 +2 thru 12</td>
     </tr>
@@ -591,17 +591,17 @@ Not started</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-2</td>
       <td>Corey Conners(W) -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Robert MacIntyre -1
 -1 thru 6</td>
       <td>Daniel Berger E
 E thru 11</td>
-      <td>Collin Morikawa E
+      <td>Jon Rahm E
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm E
+      <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout">Jordan Spieth E
-Not started</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -767,23 +767,23 @@ E thru 10</td>
       <td class="bigbold">Grace</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Xander Schauffele(W) E
 Not started</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Rory McIlroy E
 Not started</td>
-      <td class="greyout leftborder">Collin Morikawa E
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Will Zalatoris E
-Not started</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Rory McIlroy E
@@ -799,7 +799,7 @@ Not started</td>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Rory McIlroy E
@@ -818,14 +818,14 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
-      <td>Collin Morikawa E
-Not started</td>
       <td>Jon Rahm E
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele E
+      <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout">Will Zalatoris E
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
@@ -878,16 +878,16 @@ Not started</td>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">0</td>
-      <td>Collin Morikawa(W) E
-Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Hideki Matsuyama E
 E thru 9</td>
       <td>Jon Rahm E
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td>Jordan Spieth E
 Not started</td>
+      <td class="greyout leftborder">Collin Morikawa(W) +1
++1 thru 1</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
     </tr>
@@ -930,14 +930,14 @@ Not started</td>
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td>Collin Morikawa E
-Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout">Justin Thomas(W) +1
+      <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 9</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -946,14 +946,14 @@ Not started</td>
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td>Collin Morikawa E
-Not started</td>
       <td>Jon Rahm E
 Not started</td>
-      <td class="greyout leftborder">Patrick Reed E
+      <td>Patrick Reed E
 E thru 4</td>
-      <td class="greyout">Jordan Spieth E
+      <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -972,22 +972,6 @@ Not started</td>
 +1 thru 9</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">0</td>
-      <td>Collin Morikawa(W) E
-Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Rory McIlroy E
-Not started</td>
-      <td>Tiger Woods E
-E thru 10</td>
-      <td class="greyout leftborder">Justin Thomas +1
-+1 thru 9</td>
-      <td class="greyout">Gary Woodland +2
-+2 thru 5</td>
-    </tr>
-    <tr>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">0</td>
       <td>Tiger Woods(W) E
@@ -996,10 +980,10 @@ E thru 10</td>
 Not started</td>
       <td>Rory McIlroy E
 Not started</td>
-      <td>Collin Morikawa E
+      <td>Will Zalatoris E
 Not started</td>
-      <td class="greyout leftborder">Will Zalatoris E
-Not started</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 1</td>
       <td class="greyout">Justin Thomas +1
 +1 thru 9</td>
     </tr>
@@ -1082,6 +1066,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Jon Rahm E
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">1</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Rory McIlroy E
+Not started</td>
+      <td>Tiger Woods E
+E thru 10</td>
+      <td>Collin Morikawa(W) +1
++1 thru 1</td>
+      <td class="greyout leftborder">Justin Thomas +1
++1 thru 9</td>
+      <td class="greyout">Gary Woodland +2
++2 thru 5</td>
     </tr>
   </tbody>
 </table>
