--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:32:36 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:33:29 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -147,7 +147,7 @@ body {
       <td>Cameron Smith -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Sam Burns E
@@ -172,33 +172,33 @@ Not started</td>
 +4 thru 11</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-3</td>
+      <td>Sungjae Im -3
+-3 thru 3</td>
+      <td>Viktor Hovland(W) E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td>Patrick Cantlay E
+Not started</td>
+      <td class="greyout leftborder">Justin Thomas +1
++1 thru 9</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 1</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
-Not started</td>
-      <td class="greyout">Justin Thomas +1
-+1 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-2</td>
-      <td>Sungjae Im -2
--2 thru 2</td>
-      <td>Viktor Hovland(W) E
-Not started</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay E
 Not started</td>
       <td class="greyout">Justin Thomas +1
 +1 thru 9</td>
@@ -240,16 +240,16 @@ Not started</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith(W) -2
 -2 thru 10</td>
-      <td>Collin Morikawa E
-Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Rory McIlroy E
+      <td>Rory McIlroy E
 Not started</td>
-      <td class="greyout">Patrick Cantlay E
+      <td class="greyout leftborder">Patrick Cantlay E
 Not started</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -271,23 +271,23 @@ Not started</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-2</td>
       <td>Corey Conners(W) -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Robert MacIntyre -1
 -1 thru 6</td>
-      <td>Collin Morikawa E
-Not started</td>
       <td>Jon Rahm E
 Not started</td>
-      <td class="greyout leftborder">Daniel Berger E
+      <td>Daniel Berger E
 E thru 11</td>
-      <td class="greyout">Jordan Spieth E
+      <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Patrick Cantlay E
@@ -303,13 +303,13 @@ E thru 1</td>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Xander Schauffele(W) E
 Not started</td>
       <td>Dustin Johnson E
 Not started</td>
       <td>Russell Henley E
-E thru 4</td>
+E thru 5</td>
       <td class="greyout leftborder">Justin Thomas +1
 +1 thru 9</td>
       <td class="greyout">Louis Oosthuizen +2
@@ -319,7 +319,7 @@ E thru 4</td>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Xander Schauffele E
@@ -338,46 +338,46 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm E
 Not started</td>
-      <td>Collin Morikawa E
-Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Patrick Reed E
+      <td>Patrick Reed E
 E thru 4</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 1</td>
       <td class="greyout">Luke List +3
 +3 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">0</td>
-      <td>Collin Morikawa E
-Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Will Zalatoris E
 Not started</td>
       <td>Tony Finau E
 E thru 9</td>
-      <td class="greyout leftborder">Daniel Berger E
+      <td>Daniel Berger E
 E thru 11</td>
-      <td class="greyout">Justin Thomas(W) +1
+      <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 9</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon-Not Paid</td>
       <td class="bigbold">0</td>
       <td>Jon Rahm(W) E
 Not started</td>
-      <td>Collin Morikawa E
-Not started</td>
       <td>Jordan Spieth E
 Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
-      <td class="greyout leftborder">Brooks Koepka E
+      <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout">Tony Finau E
+      <td class="greyout leftborder">Tony Finau E
 E thru 9</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
