--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:33:29 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:34:22 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,8 +166,8 @@ Not started</td>
 Not started</td>
       <td>Rory McIlroy E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas +1
-+1 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas +2
++2 thru 10</td>
       <td class="greyout">Tommy Fleetwood(W) +4
 +4 thru 11</td>
     </tr>
@@ -182,8 +182,24 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas +1
-+1 thru 9</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 1</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners(W) -1
+-1 thru 5</td>
+      <td>Daniel Berger -1
+-1 thru 12</td>
+      <td>Robert MacIntyre -1
+-1 thru 6</td>
+      <td>Jon Rahm E
+Not started</td>
+      <td class="greyout leftborder">Jordan Spieth E
+Not started</td>
       <td class="greyout">Collin Morikawa +1
 +1 thru 1</td>
     </tr>
@@ -200,8 +216,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout">Justin Thomas +1
-+1 thru 9</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -214,8 +230,8 @@ Not started</td>
 Not started</td>
       <td>Tony Finau E
 E thru 9</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 10</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 12</td>
     </tr>
@@ -262,26 +278,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 10</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-2</td>
-      <td>Corey Conners(W) -1
--1 thru 5</td>
-      <td>Robert MacIntyre -1
--1 thru 6</td>
-      <td>Jon Rahm E
-Not started</td>
-      <td>Daniel Berger E
-E thru 11</td>
-      <td class="greyout leftborder">Jordan Spieth E
-Not started</td>
-      <td class="greyout">Collin Morikawa +1
-+1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -294,8 +294,8 @@ Not started</td>
 Not started</td>
       <td>Tyrrell Hatton E
 E thru 1</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 10</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 12</td>
     </tr>
@@ -310,9 +310,25 @@ Not started</td>
 Not started</td>
       <td>Russell Henley E
 E thru 5</td>
-      <td class="greyout leftborder">Justin Thomas +1
-+1 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas +2
++2 thru 10</td>
       <td class="greyout">Louis Oosthuizen +2
++2 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-1</td>
+      <td>Daniel Berger -1
+-1 thru 12</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td>Will Zalatoris E
+Not started</td>
+      <td>Tony Finau E
+E thru 9</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 1</td>
+      <td class="greyout">Justin Thomas(W) +2
 +2 thru 10</td>
     </tr>
     <tr>
@@ -326,8 +342,8 @@ Not started</td>
 Not started</td>
       <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 10</td>
       <td class="greyout">Louis Oosthuizen +2
 +2 thru 10</td>
     </tr>
@@ -346,22 +362,6 @@ E thru 4</td>
 +1 thru 1</td>
       <td class="greyout">Luke List +3
 +3 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">0</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td>Will Zalatoris E
-Not started</td>
-      <td>Tony Finau E
-E thru 9</td>
-      <td>Daniel Berger E
-E thru 11</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 9</td>
-      <td class="greyout">Collin Morikawa +1
-+1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon-Not Paid</td>
