--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:33:29 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:34:22 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,6 +166,22 @@ E thru 1</td>
 -1 thru 5</td>
       <td>Talor Gooch E
 E thru 13</td>
+      <td class="greyout leftborder">Brooks Koepka E
+Not started</td>
+      <td class="greyout">Xander Schauffele E
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler(W) -2
+-2 thru 9</td>
+      <td>Cameron Smith -2
+-2 thru 10</td>
+      <td>Billy Horschel -1
+-1 thru 1</td>
+      <td>Patrick Cantlay E
+Not started</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Xander Schauffele E
@@ -300,22 +316,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler(W) -2
--2 thru 9</td>
-      <td>Cameron Smith -2
--2 thru 10</td>
-      <td>Patrick Cantlay E
-Not started</td>
-      <td>Billy Horschel E
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka E
-Not started</td>
-      <td class="greyout">Xander Schauffele E
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">The Dub</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -2
@@ -396,6 +396,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners(W) -1
+-1 thru 5</td>
+      <td>Daniel Berger -1
+-1 thru 12</td>
+      <td>Robert MacIntyre -1
+-1 thru 6</td>
+      <td>Jon Rahm E
+Not started</td>
+      <td class="greyout leftborder">Jordan Spieth E
+Not started</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 1</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -2
@@ -424,8 +440,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout">Justin Thomas +1
-+1 thru 9</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -440,8 +456,8 @@ E thru 9</td>
 Not started</td>
       <td class="greyout leftborder">Marc Leishman +1
 +1 thru 2</td>
-      <td class="greyout">Justin Thomas +1
-+1 thru 9</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -470,8 +486,8 @@ Not started</td>
 Not started</td>
       <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 10</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 12</td>
     </tr>
@@ -536,8 +552,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
-      <td class="greyout">Justin Thomas(W) +1
-+1 thru 9</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -550,8 +566,8 @@ Not started</td>
 E thru 9</td>
       <td>Will Zalatoris E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 10</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 12</td>
     </tr>
@@ -584,24 +600,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout">Justin Thomas(W) +1
-+1 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-2</td>
-      <td>Corey Conners(W) -1
--1 thru 5</td>
-      <td>Robert MacIntyre -1
--1 thru 6</td>
-      <td>Daniel Berger E
-E thru 11</td>
-      <td>Jon Rahm E
-Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
-Not started</td>
-      <td class="greyout">Collin Morikawa +1
-+1 thru 1</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -632,8 +632,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Justin Thomas(W) +1
-+1 thru 9</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -646,8 +646,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 10</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 12</td>
     </tr>
@@ -662,8 +662,8 @@ E thru 1</td>
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 10</td>
       <td class="greyout">Justin Rose +2
 +2 thru 5</td>
     </tr>
@@ -681,7 +681,7 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Bubba Watson E
-E thru 3</td>
+E thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -710,8 +710,8 @@ Not started</td>
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 10</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 12</td>
     </tr>
@@ -726,8 +726,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 10</td>
       <td class="greyout">Louis Oosthuizen +2
 +2 thru 10</td>
     </tr>
@@ -760,8 +760,24 @@ E thru 9</td>
 Not started</td>
       <td class="greyout leftborder">Tiger Woods E
 E thru 10</td>
-      <td class="greyout">Justin Thomas +1
-+1 thru 9</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-1</td>
+      <td>Daniel Berger -1
+-1 thru 12</td>
+      <td>Patrick Cantlay E
+Not started</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Jon Rahm E
+Not started</td>
+      <td class="greyout leftborder">Xander Schauffele E
+Not started</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -792,8 +808,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout">Justin Thomas +1
-+1 thru 9</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -808,8 +824,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Justin Thomas(W) +1
-+1 thru 9</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -854,9 +870,9 @@ Not started</td>
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas +1
-+1 thru 9</td>
-      <td class="greyout">Louis Oosthuizen +2
+      <td class="greyout leftborder">Louis Oosthuizen +2
++2 thru 10</td>
+      <td class="greyout">Justin Thomas +2
 +2 thru 10</td>
     </tr>
     <tr>
@@ -872,8 +888,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout">Justin Thomas(W) +1
-+1 thru 9</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -892,22 +908,6 @@ Not started</td>
 Out With Injury</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">0</td>
-      <td>Daniel Berger E
-E thru 11</td>
-      <td>Patrick Cantlay E
-Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Jon Rahm E
-Not started</td>
-      <td class="greyout leftborder">Xander Schauffele E
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +1
-+1 thru 9</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">0</td>
       <td>Sam Burns E
@@ -920,8 +920,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Justin Thomas(W) +1
-+1 thru 9</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
@@ -934,10 +934,10 @@ Not started</td>
 Not started</td>
       <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 9</td>
-      <td class="greyout">Collin Morikawa +1
+      <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 1</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -968,8 +968,8 @@ Not started</td>
 E thru 9</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout">Justin Thomas +1
-+1 thru 9</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
@@ -984,8 +984,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 1</td>
-      <td class="greyout">Justin Thomas +1
-+1 thru 9</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
@@ -998,8 +998,8 @@ Not started</td>
 Not started</td>
       <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 10</td>
       <td class="greyout">Louis Oosthuizen +2
 +2 thru 10</td>
     </tr>
@@ -1016,8 +1016,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Justin Thomas +1
-+1 thru 9</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
@@ -1032,8 +1032,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
-      <td class="greyout">Justin Thomas +1
-+1 thru 9</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -1078,8 +1078,8 @@ Not started</td>
 E thru 10</td>
       <td>Collin Morikawa(W) +1
 +1 thru 1</td>
-      <td class="greyout leftborder">Justin Thomas +1
-+1 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas +2
++2 thru 10</td>
       <td class="greyout">Gary Woodland +2
 +2 thru 5</td>
     </tr>
