--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:35:16 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:36:10 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -307,7 +307,7 @@ E thru 1</td>
       <td>Xander Schauffele(W) E
 Not started</td>
       <td>Dustin Johnson E
-Not started</td>
+E thru 1</td>
       <td>Russell Henley E
 E thru 5</td>
       <td class="greyout leftborder">Justin Thomas +2
@@ -389,7 +389,7 @@ Not started</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Dustin Johnson E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Jon Rahm E
