--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:35:16 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:36:10 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -515,7 +515,7 @@ E thru 9</td>
       <td>Corey Conners -1
 -1 thru 5</td>
       <td>Dustin Johnson(W) E
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td class="greyout leftborder">Shane Lowry +2
@@ -581,7 +581,7 @@ Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Dustin Johnson E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Adam Scott E
@@ -665,7 +665,7 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 +2 thru 10</td>
       <td class="greyout">Justin Rose +2
-+2 thru 5</td>
++2 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -853,7 +853,7 @@ Not started</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Dustin Johnson E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jon Rahm E
 Not started</td>
       <td class="greyout">Jordan Spieth E
@@ -1039,7 +1039,7 @@ Not started</td>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">0</td>
       <td>Dustin Johnson(W) E
-Not started</td>
+E thru 1</td>
       <td>Tony Finau E
 E thru 9</td>
       <td>Matthew Fitzpatrick E
@@ -1061,7 +1061,7 @@ Not started</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Dustin Johnson E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Jon Rahm E
