--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:37:59 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:38:53 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,17 +141,17 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-6</td>
       <td>Scottie Scheffler(W) -2
 -2 thru 9</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
+      <td>Sam Burns -1
+-1 thru 2</td>
       <td>Corey Conners -1
 -1 thru 5</td>
-      <td>Xander Schauffele E
+      <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Sam Burns E
-E thru 1</td>
       <td class="greyout">Jordan Spieth E
 Not started</td>
     </tr>
@@ -168,8 +168,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Justin Thomas +2
 +2 thru 10</td>
-      <td class="greyout">Tommy Fleetwood(W) +4
-+4 thru 11</td>
+      <td class="greyout">Tommy Fleetwood(W) +5
++5 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -195,7 +195,7 @@ Not started</td>
       <td>Daniel Berger -1
 -1 thru 12</td>
       <td>Robert MacIntyre -1
--1 thru 6</td>
+-1 thru 7</td>
       <td>Jon Rahm E
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
