--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:37:59 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:38:53 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,19 +141,51 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-6</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
+      <td>Sam Burns -1
+-1 thru 2</td>
       <td>Corey Conners -1
 -1 thru 5</td>
-      <td>Viktor Hovland(W) E
+      <td class="greyout leftborder">Viktor Hovland(W) E
 Not started</td>
-      <td class="greyout leftborder">Sam Burns E
-E thru 1</td>
       <td class="greyout">Tyrrell Hatton E
 E thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">BCREAMED</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -2
+-2 thru 10</td>
+      <td>Scottie Scheffler -2
+-2 thru 9</td>
+      <td>Sam Burns -1
+-1 thru 2</td>
+      <td>Patrick Cantlay E
+Not started</td>
+      <td class="greyout leftborder">Brooks Koepka E
+Not started</td>
+      <td class="greyout">Louis Oosthuizen +2
++2 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Barb Wellard</td>
+      <td class="bigbold">-5</td>
+      <td>Joaquin Niemann -2
+-2 thru 10</td>
+      <td>Cameron Smith -2
+-2 thru 10</td>
+      <td>Sam Burns -1
+-1 thru 2</td>
+      <td>Jon Rahm(W) E
+Not started</td>
+      <td class="greyout leftborder">Brooks Koepka E
+Not started</td>
+      <td class="greyout">Xander Schauffele E
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
@@ -220,6 +252,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -2
+-2 thru 10</td>
+      <td>Sam Burns -1
+-1 thru 2</td>
+      <td>Corey Conners -1
+-1 thru 5</td>
+      <td>Jon Rahm(W) E
+Not started</td>
+      <td class="greyout leftborder">Xander Schauffele E
+Not started</td>
+      <td class="greyout">Tiger Woods E
+E thru 10</td>
+    </tr>
+    <tr>
       <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler -2
@@ -227,7 +275,7 @@ Not started</td>
       <td>Corey Conners -1
 -1 thru 5</td>
       <td>Webb Simpson -1
--1 thru 2</td>
+-1 thru 3</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
@@ -243,7 +291,7 @@ Not started</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
       <td>Hideki Matsuyama E
-E thru 9</td>
+E thru 10</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
@@ -252,35 +300,19 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">BCREAMED</td>
+      <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -2
--2 thru 10</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
-      <td>Sam Burns E
-E thru 1</td>
-      <td>Patrick Cantlay E
+      <td>Sam Burns -1
+-1 thru 2</td>
+      <td>Corey Conners -1
+-1 thru 5</td>
+      <td>Patrick Cantlay(W) E
 Not started</td>
-      <td class="greyout leftborder">Brooks Koepka E
+      <td class="greyout leftborder">Viktor Hovland E
 Not started</td>
-      <td class="greyout">Louis Oosthuizen +2
-+2 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Barb Wellard</td>
-      <td class="bigbold">-4</td>
-      <td>Joaquin Niemann -2
--2 thru 10</td>
-      <td>Cameron Smith -2
--2 thru 10</td>
-      <td>Jon Rahm(W) E
-Not started</td>
-      <td>Sam Burns E
-E thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka E
-Not started</td>
-      <td class="greyout">Xander Schauffele E
+      <td class="greyout">Jon Rahm E
 Not started</td>
     </tr>
     <tr>
@@ -307,7 +339,7 @@ Not started</td>
       <td>Corey Conners -1
 -1 thru 5</td>
       <td>Robert MacIntyre -1
--1 thru 6</td>
+-1 thru 7</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td class="greyout leftborder">Rory McIlroy E
@@ -332,20 +364,20 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -2
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-4</td>
+      <td>Joaquin Niemann -2
 -2 thru 10</td>
+      <td>Sam Burns -1
+-1 thru 2</td>
       <td>Corey Conners -1
 -1 thru 5</td>
-      <td>Jon Rahm(W) E
+      <td>Viktor Hovland E
 Not started</td>
-      <td>Sam Burns E
-E thru 1</td>
-      <td class="greyout leftborder">Xander Schauffele E
-Not started</td>
-      <td class="greyout">Tiger Woods E
-E thru 10</td>
+      <td class="greyout leftborder">Brian Harman +1
++1 thru 16</td>
+      <td class="greyout">Shane Lowry(W) +2
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
@@ -403,29 +435,13 @@ Not started</td>
       <td>Daniel Berger -1
 -1 thru 12</td>
       <td>Robert MacIntyre -1
--1 thru 6</td>
+-1 thru 7</td>
       <td>Jon Rahm E
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Collin Morikawa +1
 +1 thru 1</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -2
--2 thru 9</td>
-      <td>Corey Conners -1
--1 thru 5</td>
-      <td>Patrick Cantlay(W) E
-Not started</td>
-      <td>Sam Burns E
-E thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland E
-Not started</td>
-      <td class="greyout">Jon Rahm E
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -451,11 +467,11 @@ Not started</td>
       <td>Corey Conners -1
 -1 thru 5</td>
       <td>Hideki Matsuyama E
-E thru 9</td>
+E thru 10</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Marc Leishman +1
-+1 thru 2</td>
++1 thru 3</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 10</td>
     </tr>
@@ -469,11 +485,27 @@ Not started</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Hideki Matsuyama E
-E thru 9</td>
+E thru 10</td>
       <td class="greyout leftborder">Jon Rahm E
 Not started</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -2
+-2 thru 10</td>
+      <td>Sam Burns -1
+-1 thru 2</td>
+      <td>Rory McIlroy E
+Not started</td>
+      <td>Xander Schauffele E
+Not started</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 10</td>
+      <td class="greyout">Justin Rose +2
++2 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -505,7 +537,7 @@ E thru 13</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Hideki Matsuyama E
-E thru 9</td>
+E thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -524,20 +556,20 @@ Not started</td>
 +2 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">Neville Spillman</td>
       <td class="bigbold">-3</td>
-      <td>Joaquin Niemann -2
--2 thru 10</td>
-      <td>Corey Conners -1
--1 thru 5</td>
-      <td>Sam Burns E
-E thru 1</td>
-      <td>Viktor Hovland E
+      <td>Scottie Scheffler -2
+-2 thru 9</td>
+      <td>Sam Burns -1
+-1 thru 2</td>
+      <td>Jordan Spieth(W) E
 Not started</td>
-      <td class="greyout leftborder">Brian Harman +1
-+1 thru 16</td>
-      <td class="greyout">Shane Lowry(W) +2
-+2 thru 12</td>
+      <td>Patrick Cantlay E
+Not started</td>
+      <td class="greyout leftborder">Brooks Koepka E
+Not started</td>
+      <td class="greyout">Jon Rahm E
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -652,22 +684,6 @@ Not started</td>
 +2 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -2
--2 thru 10</td>
-      <td>Sam Burns E
-E thru 1</td>
-      <td>Rory McIlroy E
-Not started</td>
-      <td>Xander Schauffele E
-Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
-+2 thru 10</td>
-      <td class="greyout">Justin Rose +2
-+2 thru 6</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
@@ -732,22 +748,6 @@ Not started</td>
 +2 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Neville Spillman</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -2
--2 thru 9</td>
-      <td>Jordan Spieth(W) E
-Not started</td>
-      <td>Sam Burns E
-E thru 1</td>
-      <td>Patrick Cantlay E
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka E
-Not started</td>
-      <td class="greyout">Jon Rahm E
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
@@ -755,7 +755,7 @@ Not started</td>
       <td>Rory McIlroy(W) E
 Not started</td>
       <td>Hideki Matsuyama E
-E thru 9</td>
+E thru 10</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Tiger Woods E
@@ -775,6 +775,22 @@ Not started</td>
       <td>Jon Rahm E
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
+Not started</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">-1</td>
+      <td>Sam Burns -1
+-1 thru 2</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Jon Rahm E
+Not started</td>
+      <td>Jordan Spieth E
+Not started</td>
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 10</td>
@@ -897,7 +913,7 @@ Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Hideki Matsuyama E
-E thru 9</td>
+E thru 10</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Jordan Spieth E
@@ -906,22 +922,6 @@ Not started</td>
 +1 thru 1</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">0</td>
-      <td>Sam Burns E
-E thru 1</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Jon Rahm E
-Not started</td>
-      <td>Jordan Spieth E
-Not started</td>
-      <td class="greyout leftborder">Will Zalatoris E
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
@@ -965,7 +965,7 @@ Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Hideki Matsuyama E
-E thru 9</td>
+E thru 10</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Justin Thomas +2
