--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:51:26 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:52:21 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,11 +141,11 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -3
+-3 thru 12</td>
       <td>Scottie Scheffler(W) -2
--2 thru 9</td>
-      <td>Cameron Smith -2
--2 thru 11</td>
+-2 thru 10</td>
       <td>Sam Burns -1
 -1 thru 2</td>
       <td>Corey Conners -1
@@ -157,9 +157,9 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -2
--2 thru 11</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -3
+-3 thru 12</td>
       <td>Joaquin Niemann -2
 -2 thru 11</td>
       <td>Viktor Hovland E
@@ -170,6 +170,38 @@ Not started</td>
 +2 thru 10</td>
       <td class="greyout">Tommy Fleetwood(W) +5
 +5 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-4</td>
+      <td>Daniel Berger -2
+-2 thru 13</td>
+      <td>Corey Conners(W) -1
+-1 thru 6</td>
+      <td>Robert MacIntyre -1
+-1 thru 7</td>
+      <td>Jon Rahm E
+E thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth E
+Not started</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 2</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -3
+-3 thru 12</td>
+      <td>Corey Conners -1
+-1 thru 6</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Xander Schauffele E
+Not started</td>
+      <td class="greyout leftborder">Jordan Spieth E
+Not started</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -183,40 +215,40 @@ Not started</td>
       <td>Patrick Cantlay E
 E thru 1</td>
       <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">John Nixon</td>
       <td class="bigbold">-3</td>
-      <td>Corey Conners(W) -1
--1 thru 6</td>
-      <td>Daniel Berger -1
--1 thru 12</td>
-      <td>Robert MacIntyre -1
--1 thru 7</td>
-      <td>Jon Rahm E
-Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
-Not started</td>
-      <td class="greyout">Collin Morikawa +1
-+1 thru 1</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -2
--2 thru 11</td>
-      <td>Corey Conners -1
--1 thru 6</td>
-      <td>Viktor Hovland E
+      <td>Cameron Smith(W) -3
+-3 thru 12</td>
+      <td>Brooks Koepka E
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td>Rory McIlroy E
 Not started</td>
-      <td class="greyout">Justin Thomas +2
+      <td class="greyout leftborder">Patrick Cantlay E
+E thru 1</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 2</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -3
+-3 thru 12</td>
+      <td>Matthew Fitzpatrick E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td>Shane Lowry E
+E thru 13</td>
+      <td class="greyout leftborder">Will Zalatoris E
+E thru 1</td>
+      <td class="greyout">Justin Thomas(W) +2
 +2 thru 10</td>
     </tr>
     <tr>
@@ -227,7 +259,7 @@ Not started</td>
       <td>Corey Conners -1
 -1 thru 6</td>
       <td>Jon Rahm E
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay E
 E thru 1</td>
       <td class="greyout leftborder">Shane Lowry E
@@ -239,11 +271,11 @@ E thru 13</td>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-2</td>
       <td>Scottie Scheffler -2
--2 thru 9</td>
+-2 thru 10</td>
       <td>Patrick Cantlay E
 E thru 1</td>
       <td>Will Zalatoris E
-Not started</td>
+E thru 1</td>
       <td>Tony Finau E
 E thru 10</td>
       <td class="greyout leftborder">Shane Lowry E
@@ -255,63 +287,31 @@ E thru 13</td>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-2</td>
       <td>Scottie Scheffler(W) -2
--2 thru 9</td>
+-2 thru 10</td>
       <td>Jon Rahm E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Jordan Spieth E
 Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Shane Lowry E
 E thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith(W) -2
--2 thru 11</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td>Xander Schauffele E
-Not started</td>
-      <td>Rory McIlroy E
-Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay E
-E thru 1</td>
-      <td class="greyout">Collin Morikawa +1
-+1 thru 1</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -2
--2 thru 11</td>
-      <td>Matthew Fitzpatrick E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td>Shane Lowry E
-E thru 13</td>
-      <td class="greyout leftborder">Will Zalatoris E
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 10</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-1</td>
-      <td>Daniel Berger -1
--1 thru 12</td>
+      <td class="bigbold">-2</td>
+      <td>Daniel Berger -2
+-2 thru 13</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Will Zalatoris E
-Not started</td>
+E thru 1</td>
       <td>Tony Finau E
 E thru 10</td>
       <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 10</td>
     </tr>
@@ -321,7 +321,7 @@ E thru 10</td>
       <td>Corey Conners -1
 -1 thru 6</td>
       <td>Jon Rahm E
-Not started</td>
+E thru 1</td>
       <td>Xander Schauffele E
 Not started</td>
       <td>Jordan Spieth E
@@ -348,26 +348,10 @@ E thru 1</td>
 +3 thru 11</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">0</td>
-      <td>Viktor Hovland(W) E
-Not started</td>
-      <td>Jon Rahm E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td>Patrick Reed E
-E thru 4</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 1</td>
-      <td class="greyout">Luke List +3
-+3 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon-Not Paid</td>
       <td class="bigbold">0</td>
       <td>Jon Rahm(W) E
-Not started</td>
+E thru 1</td>
       <td>Jordan Spieth E
 Not started</td>
       <td>Patrick Cantlay E
@@ -377,7 +361,7 @@ Not started</td>
       <td class="greyout leftborder">Tony Finau E
 E thru 10</td>
       <td class="greyout">Collin Morikawa +1
-+1 thru 1</td>
++1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -393,7 +377,23 @@ E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Jon Rahm E
+E thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">1</td>
+      <td>Viktor Hovland(W) E
 Not started</td>
+      <td>Jon Rahm E
+E thru 1</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td>Collin Morikawa +1
++1 thru 2</td>
+      <td class="greyout leftborder">Patrick Reed +1
++1 thru 5</td>
+      <td class="greyout">Luke List +2
++2 thru 15</td>
     </tr>
   </tbody>
 </table>
