--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:00:28 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:01:23 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -364,7 +364,7 @@ Not started</td>
 E thru 1</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon-Not Paid</td>
+      <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">0</td>
       <td>Jon Rahm(W) E
 E thru 1</td>
