--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:33:38 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:34:32 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -181,7 +181,7 @@ E thru 2</td>
       <td>Matthew Fitzpatrick -1
 -1 thru 2</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka E
 E thru 2</td>
       <td class="greyout">Xander Schauffele E
@@ -211,7 +211,7 @@ E thru 2</td>
       <td>Scottie Scheffler -3
 -3 thru 12</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Brooks Koepka E
 E thru 2</td>
       <td class="greyout leftborder">Sam Burns +2
@@ -227,7 +227,7 @@ E thru 2</td>
       <td>Scottie Scheffler -3
 -3 thru 12</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Viktor Hovland E
 E thru 3</td>
       <td class="greyout leftborder">Brooks Koepka E
@@ -293,7 +293,7 @@ E thru 2</td>
       <td>Billy Horschel -1
 -1 thru 4</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka E
 E thru 2</td>
       <td class="greyout">Xander Schauffele E
@@ -348,22 +348,6 @@ E thru 3</td>
 +1 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -4
--4 thru 14</td>
-      <td>Corey Conners -1
--1 thru 8</td>
-      <td>Tiger Woods -1
--1 thru 13</td>
-      <td>Jon Rahm(W) E
-E thru 3</td>
-      <td class="greyout leftborder">Xander Schauffele E
-E thru 2</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 5</td>
-    </tr>
-    <tr>
       <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -3
@@ -391,7 +375,7 @@ E thru 2</td>
       <td>Jon Rahm(W) E
 E thru 3</td>
       <td class="greyout leftborder">Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout">Viktor Hovland E
 E thru 3</td>
     </tr>
@@ -410,38 +394,6 @@ E thru 3</td>
 E thru 3</td>
       <td class="greyout">Xander Schauffele E
 E thru 2</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-6</td>
-      <td>Daniel Berger -3
--3 thru 15</td>
-      <td>Corey Conners(W) -1
--1 thru 8</td>
-      <td>Robert MacIntyre -1
--1 thru 9</td>
-      <td>Jordan Spieth -1
--1 thru 2</td>
-      <td class="greyout leftborder">Jon Rahm E
-E thru 3</td>
-      <td class="greyout">Collin Morikawa +1
-+1 thru 4</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler(W) -3
--3 thru 12</td>
-      <td>Corey Conners -1
--1 thru 8</td>
-      <td>Robert MacIntyre -1
--1 thru 9</td>
-      <td>Rory McIlroy -1
--1 thru 2</td>
-      <td class="greyout leftborder">Patrick Cantlay E
-E thru 3</td>
-      <td class="greyout">Jon Rahm E
-E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -501,27 +453,43 @@ E thru 3</td>
       <td>Corey Conners -1
 -1 thru 8</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 thru 16</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">-5</td>
       <td>Cameron Smith -4
 -4 thru 14</td>
-      <td>Rory McIlroy(W) -1
--1 thru 2</td>
-      <td>Tiger Woods -1
--1 thru 13</td>
+      <td>Corey Conners -1
+-1 thru 8</td>
+      <td>Jon Rahm(W) E
+E thru 3</td>
       <td>Xander Schauffele E
 E thru 2</td>
-      <td class="greyout leftborder">Hideki Matsuyama +1
-+1 thru 13</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 13</td>
+      <td class="greyout leftborder">Tiger Woods E
+E thru 14</td>
+      <td class="greyout">Sam Burns +2
++2 thru 5</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-5</td>
+      <td>Daniel Berger -3
+-3 thru 15</td>
+      <td>Corey Conners(W) -1
+-1 thru 8</td>
+      <td>Jordan Spieth -1
+-1 thru 2</td>
+      <td>Robert MacIntyre E
+E thru 10</td>
+      <td class="greyout leftborder">Jon Rahm E
+E thru 3</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -531,13 +499,29 @@ E thru 2</td>
       <td>Will Zalatoris -1
 -1 thru 4</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Brooks Koepka E
 E thru 2</td>
       <td class="greyout leftborder">Xander Schauffele E
 E thru 2</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey B</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler(W) -3
+-3 thru 12</td>
+      <td>Corey Conners -1
+-1 thru 8</td>
+      <td>Rory McIlroy -1
+-1 thru 2</td>
+      <td>Patrick Cantlay E
+E thru 4</td>
+      <td class="greyout leftborder">Robert MacIntyre E
+E thru 10</td>
+      <td class="greyout">Jon Rahm E
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -572,6 +556,22 @@ E thru 2</td>
 +1 thru 13</td>
     </tr>
     <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -4
+-4 thru 14</td>
+      <td>Rory McIlroy(W) -1
+-1 thru 2</td>
+      <td>Xander Schauffele E
+E thru 2</td>
+      <td>Tiger Woods E
+E thru 14</td>
+      <td class="greyout leftborder">Hideki Matsuyama +1
++1 thru 13</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 13</td>
+    </tr>
+    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler -3
@@ -579,7 +579,7 @@ E thru 2</td>
       <td>Rory McIlroy -1
 -1 thru 2</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Viktor Hovland E
 E thru 3</td>
       <td class="greyout leftborder">Xander Schauffele E
@@ -597,7 +597,7 @@ E thru 2</td>
       <td>Brooks Koepka(W) E
 E thru 2</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Xander Schauffele E
 E thru 2</td>
       <td class="greyout">Adam Scott +2
@@ -611,7 +611,7 @@ E thru 2</td>
       <td>Jordan Spieth -1
 -1 thru 2</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Brooks Koepka E
 E thru 2</td>
       <td class="greyout leftborder">Xander Schauffele E
@@ -643,7 +643,7 @@ E thru 2</td>
       <td>Corey Conners -1
 -1 thru 8</td>
       <td>Patrick Cantlay(W) E
-E thru 3</td>
+E thru 4</td>
       <td>Viktor Hovland E
 E thru 3</td>
       <td class="greyout leftborder">Jon Rahm E
@@ -673,7 +673,7 @@ E thru 2</td>
       <td>Cameron Smith -4
 -4 thru 14</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Viktor Hovland E
 E thru 3</td>
       <td>Brooks Koepka E
@@ -707,7 +707,7 @@ E thru 2</td>
       <td>Jordan Spieth(W) -1
 -1 thru 2</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Brooks Koepka E
 E thru 2</td>
       <td class="greyout leftborder">Jon Rahm E
@@ -725,7 +725,7 @@ E thru 3</td>
       <td>Jordan Spieth -1
 -1 thru 2</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Viktor Hovland E
 E thru 3</td>
       <td class="greyout">Jon Rahm E
@@ -739,7 +739,7 @@ E thru 3</td>
       <td>Will Zalatoris -1
 -1 thru 4</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Tony Finau +1
 +1 thru 12</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -753,7 +753,7 @@ E thru 3</td>
       <td>Daniel Berger -3
 -3 thru 15</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Viktor Hovland E
 E thru 3</td>
       <td>Jon Rahm E
@@ -792,22 +792,6 @@ E thru 3</td>
 E thru 3</td>
       <td class="greyout leftborder">Xander Schauffele E
 E thru 2</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-3</td>
-      <td>Tiger Woods(W) -1
--1 thru 13</td>
-      <td>Rory McIlroy -1
--1 thru 2</td>
-      <td>Will Zalatoris -1
--1 thru 4</td>
-      <td>Viktor Hovland E
-E thru 3</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 4</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 13</td>
     </tr>
@@ -876,6 +860,22 @@ E thru 3</td>
 +2 thru 5</td>
     </tr>
     <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-2</td>
+      <td>Rory McIlroy -1
+-1 thru 2</td>
+      <td>Will Zalatoris -1
+-1 thru 4</td>
+      <td>Tiger Woods(W) E
+E thru 14</td>
+      <td>Viktor Hovland E
+E thru 3</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 4</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 13</td>
+    </tr>
+    <tr>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">-2</td>
       <td>Jordan Spieth -1
@@ -915,7 +915,7 @@ E thru 2</td>
       <td>Dustin Johnson -1
 -1 thru 4</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Viktor Hovland E
 E thru 3</td>
       <td class="greyout leftborder">Brooks Koepka E
@@ -931,7 +931,7 @@ E thru 3</td>
       <td>Viktor Hovland(W) E
 E thru 3</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Jon Rahm E
 E thru 3</td>
       <td class="greyout leftborder">Xander Schauffele E
@@ -961,7 +961,7 @@ E thru 2</td>
       <td>Jordan Spieth -1
 -1 thru 2</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Brooks Koepka E
 E thru 2</td>
       <td>Xander Schauffele E
@@ -995,29 +995,13 @@ E thru 3</td>
       <td>Jon Rahm(W) E
 E thru 3</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Brooks Koepka E
 E thru 2</td>
       <td class="greyout leftborder">Hideki Matsuyama +1
 +1 thru 13</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">-1</td>
-      <td>Rory McIlroy -1
--1 thru 2</td>
-      <td>Tiger Woods -1
--1 thru 13</td>
-      <td>Viktor Hovland E
-E thru 3</td>
-      <td>Collin Morikawa(W) +1
-+1 thru 4</td>
-      <td class="greyout leftborder">Justin Thomas +2
-+2 thru 13</td>
-      <td class="greyout">Gary Woodland +3
-+3 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
@@ -1041,7 +1025,7 @@ E thru 2</td>
       <td>Rory McIlroy -1
 -1 thru 2</td>
       <td>Patrick Cantlay(W) E
-E thru 3</td>
+E thru 4</td>
       <td>Brooks Koepka E
 E thru 2</td>
       <td>Jon Rahm E
@@ -1073,7 +1057,7 @@ E thru 2</td>
       <td>Jordan Spieth -1
 -1 thru 2</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Jon Rahm E
 E thru 3</td>
       <td>Collin Morikawa(W) +1
@@ -1082,6 +1066,22 @@ E thru 3</td>
 +1 thru 13</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">0</td>
+      <td>Rory McIlroy -1
+-1 thru 2</td>
+      <td>Viktor Hovland E
+E thru 3</td>
+      <td>Tiger Woods E
+E thru 14</td>
+      <td>Collin Morikawa(W) +1
++1 thru 4</td>
+      <td class="greyout leftborder">Justin Thomas +2
++2 thru 13</td>
+      <td class="greyout">Gary Woodland +3
++3 thru 9</td>
     </tr>
   </tbody>
 </table>
