--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:33:38 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:34:32 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -199,7 +199,7 @@ E thru 2</td>
       <td>Xander Schauffele E
 E thru 2</td>
       <td class="greyout leftborder">Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout">Collin Morikawa +1
 +1 thru 4</td>
     </tr>
@@ -220,22 +220,6 @@ E thru 2</td>
 +2 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-6</td>
-      <td>Daniel Berger -3
--3 thru 15</td>
-      <td>Corey Conners(W) -1
--1 thru 8</td>
-      <td>Jordan Spieth -1
--1 thru 2</td>
-      <td>Robert MacIntyre -1
--1 thru 9</td>
-      <td class="greyout leftborder">Jon Rahm E
-E thru 3</td>
-      <td class="greyout">Collin Morikawa +1
-+1 thru 4</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler(W) -3
@@ -252,6 +236,22 @@ E thru 2</td>
 +1 thru 16</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-5</td>
+      <td>Daniel Berger -3
+-3 thru 15</td>
+      <td>Corey Conners(W) -1
+-1 thru 8</td>
+      <td>Jordan Spieth -1
+-1 thru 2</td>
+      <td>Jon Rahm E
+E thru 3</td>
+      <td class="greyout leftborder">Robert MacIntyre E
+E thru 10</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 4</td>
+    </tr>
+    <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-3</td>
       <td>Sungjae Im -3
@@ -261,7 +261,7 @@ E thru 3</td>
       <td>Brooks Koepka E
 E thru 2</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 4</td>
       <td class="greyout">Justin Thomas +2
@@ -275,7 +275,7 @@ E thru 3</td>
       <td>Will Zalatoris -1
 -1 thru 4</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Tony Finau +1
 +1 thru 12</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -323,7 +323,7 @@ E thru 2</td>
       <td>Dustin Johnson -1
 -1 thru 4</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Viktor Hovland E
 E thru 3</td>
       <td class="greyout leftborder">Brooks Koepka E
@@ -339,7 +339,7 @@ E thru 3</td>
       <td>Jon Rahm E
 E thru 3</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Tyrrell Hatton E
 E thru 5</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -371,7 +371,7 @@ E thru 2</td>
       <td>Jon Rahm(W) E
 E thru 3</td>
       <td>Patrick Cantlay E
-E thru 3</td>
+E thru 4</td>
       <td>Brooks Koepka E
 E thru 2</td>
       <td class="greyout leftborder">Collin Morikawa +1
