--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:43:22 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:44:05 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -332,6 +332,22 @@ E thru 5</td>
 +1 thru 14</td>
     </tr>
     <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith -6
+-6 thru 16</td>
+      <td>Corey Conners -1
+-1 thru 10</td>
+      <td>Tiger Woods -1
+-1 thru 16</td>
+      <td>Jon Rahm(W) E
+E thru 5</td>
+      <td class="greyout leftborder">Xander Schauffele E
+E thru 4</td>
+      <td class="greyout">Sam Burns +2
++2 thru 7</td>
+    </tr>
+    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-8</td>
       <td>Cameron Smith -6
@@ -412,20 +428,20 @@ E thru 5</td>
 +3 thru 15</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith -6
 -6 thru 16</td>
-      <td>Corey Conners -1
--1 thru 10</td>
-      <td>Jon Rahm(W) E
-E thru 5</td>
+      <td>Rory McIlroy(W) -1
+-1 thru 4</td>
+      <td>Tiger Woods -1
+-1 thru 16</td>
       <td>Xander Schauffele E
 E thru 4</td>
-      <td class="greyout leftborder">Tiger Woods E
-E thru 15</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 7</td>
+      <td class="greyout leftborder">Hideki Matsuyama +1
++1 thru 14</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -474,22 +490,6 @@ E (F)</td>
 E thru 4</td>
       <td class="greyout">Hideki Matsuyama +1
 +1 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith -6
--6 thru 16</td>
-      <td>Rory McIlroy(W) -1
--1 thru 4</td>
-      <td>Xander Schauffele E
-E thru 4</td>
-      <td>Tiger Woods E
-E thru 15</td>
-      <td class="greyout leftborder">Hideki Matsuyama +1
-+1 thru 14</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -764,6 +764,22 @@ E thru 4</td>
 +1 thru 6</td>
     </tr>
     <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-3</td>
+      <td>Tiger Woods(W) -1
+-1 thru 16</td>
+      <td>Rory McIlroy -1
+-1 thru 4</td>
+      <td>Will Zalatoris -1
+-1 thru 5</td>
+      <td>Viktor Hovland E
+E thru 4</td>
+      <td class="greyout leftborder">Collin Morikawa +1
++1 thru 6</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 14</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-3</td>
       <td>Corey Conners -1
@@ -844,22 +860,6 @@ E thru 4</td>
 +2 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-2</td>
-      <td>Rory McIlroy -1
--1 thru 4</td>
-      <td>Will Zalatoris -1
--1 thru 5</td>
-      <td>Tiger Woods(W) E
-E thru 15</td>
-      <td>Viktor Hovland E
-E thru 4</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 6</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">-1</td>
       <td>Will Zalatoris -1
@@ -890,6 +890,22 @@ E thru 4</td>
 +2 thru 14</td>
       <td class="greyout">Sam Burns +2
 +2 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">-1</td>
+      <td>Rory McIlroy -1
+-1 thru 4</td>
+      <td>Tiger Woods -1
+-1 thru 16</td>
+      <td>Viktor Hovland E
+E thru 4</td>
+      <td>Collin Morikawa(W) +1
++1 thru 6</td>
+      <td class="greyout leftborder">Justin Thomas +2
++2 thru 14</td>
+      <td class="greyout">Gary Woodland +3
++3 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
@@ -1034,22 +1050,6 @@ E thru 4</td>
 +1 thru 14</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">0</td>
-      <td>Rory McIlroy -1
--1 thru 4</td>
-      <td>Viktor Hovland E
-E thru 4</td>
-      <td>Tiger Woods E
-E thru 15</td>
-      <td>Collin Morikawa(W) +1
-+1 thru 6</td>
-      <td class="greyout leftborder">Justin Thomas +2
-+2 thru 14</td>
-      <td class="greyout">Gary Woodland +3
-+3 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
